tests/NormalTests/paczka1/small_fuzzy/12112186.err
Error in line 1: NsQBmw A2Ü9 92,8
Error in line 8: S821
Error in line 2: 8dg A219 54,8
